@startuml
title Arpit - Export (Strategy Pattern), Search, Notify

skinparam classAttributeIconSize 0

note as N1
  **Design Pattern:**
  Strategy - MeetingExporter interface
  with MarkdownExporter & HtmlExporter

  **Feature: Multi-Format Export**
  Supports Markdown and HTML export
  via pluggable exporter strategies.
end note

package "EchoNote.Jack" {
    class MeetingRecord
    class Workspace
    class Participant
    class Summary
    class ActionItem
    class ExportResult
    class MeetingFormatter <<Utility>>
    enum ExportFormat
}

package "EchoNote.Arpit" {

    ' Strategy Pattern for Export
    interface MeetingExporter <<Strategy>> {
        + export(record : MeetingRecord) : ExportResult
        + getFileExtension() : String
    }

    class MarkdownExporter <<ConcreteStrategy>> {
        - exportDirectory : File
        --
        + MarkdownExporter(exportDirectory : File)
        + export(record : MeetingRecord) : ExportResult
        + getFileExtension() : String
    }

    class HtmlExporter <<ConcreteStrategy>> {
        - exportDirectory : File
        --
        + HtmlExporter(exportDirectory : File)
        + export(record : MeetingRecord) : ExportResult
        + getFileExtension() : String
    }

    class ExportService <<Context>> {
        - exportDirectory : File
        - exporters : Map<ExportFormat, MeetingExporter>
        --
        + ExportService()
        + ExportService(exportDirectory : File)
        + export(record : MeetingRecord, format : ExportFormat) : ExportResult
        + exportAsMarkdown(record : MeetingRecord) : ExportResult
        + exportAsHtml(record : MeetingRecord) : ExportResult
        + getSupportedFormats() : ExportFormat[]
    }

    class SearchService {
        - workspace : Workspace
        --
        + SearchService(workspace : Workspace)
        + search(query : String) : List<MeetingRecord>
    }

    interface Notifier {
        + notify(record : MeetingRecord, event : String) : void
    }

    class EmailNotifier {
        + emailParticipants(record : MeetingRecord, event : String) : void
    }

    class NotificationException
    class UnsupportedExportException
}

' Strategy Pattern relationships
MeetingExporter <|.. MarkdownExporter
MeetingExporter <|.. HtmlExporter
ExportService --> MeetingExporter : uses
ExportService o-- "*" MeetingExporter : registers

' Export dependencies
ExportService --> ExportFormat
ExportService --> MeetingRecord
ExportService --> ExportResult
ExportService --> UnsupportedExportException : throws

MarkdownExporter --> MeetingRecord
MarkdownExporter --> ExportResult
MarkdownExporter --> MeetingFormatter : uses

HtmlExporter --> MeetingRecord
HtmlExporter --> ExportResult
HtmlExporter --> MeetingFormatter : uses

' Search dependencies
SearchService --> Workspace
SearchService --> MeetingRecord

' Notification dependencies
Notifier --> MeetingRecord
EmailNotifier ..|> Notifier
EmailNotifier --> MeetingRecord
EmailNotifier --> Participant
EmailNotifier --> MeetingFormatter : uses
EmailNotifier --> NotificationException

@enduml
